--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Hello World!</title>
+
 </head>
 
 <body>
 
-   <script type="text/javascript" src="app.js"></script>
+<script type="text/javascript" src="js/app.js"></script>
 
 </body>
 </html>
